# uscope

./: .gitignore  Cargo.toml  LICENSE  LICENSE-APACHE  LICENSE-CC-BY  README.md  TODO.md  book.toml  mdbook-svgbob-pre.sh  svgbob.css
.github/workflows/: deploy.yml
crates/gen-uscope/: Cargo.toml
crates/gen-uscope/src/: main.rs
crates/konata2uscope/: Cargo.toml
crates/konata2uscope/src/: main.rs
crates/uscope/: Cargo.toml
crates/uscope-cli/: Cargo.toml
crates/uscope-cli/src/: main.rs
crates/uscope-cpu/: Cargo.toml
crates/uscope-cpu/src/: buffers.rs  builder.rs  counters.rs  decode.rs  lib.rs  resolve.rs  types.rs
crates/uscope-mcp/: Cargo.toml
crates/uscope-mcp/src/: main.rs
crates/uscope/src/: checkpoint.rs  leb128.rs  lib.rs  reader.rs  schema.rs  segment.rs  state.rs  string_pool.rs  summary.rs  types.rs  writer.rs
crates/uscope/src/protocols/: cpu.rs
crates/uscope/tests/: cross_validate.rs  roundtrip.rs
dpi/: Makefile  test_write.c  uscope_dpi.c  uscope_dpi.h
src/: SUMMARY.md  c-api.md  cpu-protocol-spec.md  konata2uscope.md  noc-protocol-spec.md  rust-api.md  uscope-cli.md  uscope-cpu-api.md  uscope-format-spec.md  uscope-mcp.md
