[package]
name = "uscope-cli"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "CLI for inspecting µScope CPU pipeline traces"

[[bin]]
name = "uscope-cli"
path = "src/main.rs"

[dependencies]
uscope = { path = "../uscope" }
uscope-cpu = { path = "../uscope-cpu" }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
