[package]
name = "uscope-mcp"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "MCP server for inspecting uScope CPU pipeline traces via Claude"

[[bin]]
name = "uscope-mcp"
path = "src/main.rs"

[dependencies]
uscope = { path = "../uscope" }
uscope-cpu = { path = "../uscope-cpu" }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
